--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 finviz~=1.3.4
-beautifulsoup4~=4.8.2
-requests~=2.22.0
+beautifulsoup4~=4.9.3
+requests~=2.24.0
 aiohttp~=3.6.2
-lxml~=4.5.0
+lxml~=4.6.1
+pytest==6.1.1
+isort==5.6.4
+urllib3~=1.25.10
+user_agent~=0.1.9
